Enhance blog design: hero banner, tags page, broken links fixes

--- a/_posts/2026-01-08-welcome.md
+++ b/_posts/2026-01-08-welcome.md
@@ -1,29 +1,38 @@
 ---
 layout: post
-title: "Welcome to My Blog"
-date: 2026-01-08
-categories: [general]
-tags: [welcome, first-post]
-excerpt: "This is my first blog post. Welcome to my corner of the internet!"
+title: "Welcome to A Dev Writes"
+date: 2026-01-14
+author: Laxman Sharma
+image: /assets/images/welcome-hero.png
+categories: [introduction, community]
+tags: [welcome, engineering, distributed-systems, observability]
+excerpt: "Hi, I'm Laxman. Welcome to my digital garden where I share deep dives into distributed systems, observability, and software engineering patterns."
 ---
 
-# Welcome!
+# Hello, World! 👋
 
-This is my first blog post. I'll be sharing my thoughts, tutorials, and insights here.
+Welcome to **A Dev Writes**. I'm Laxman Sharma, and this is my corner of the internet dedicated to the craft of software engineering.
 
-## What to Expect
+## Why This Blog?
 
-- **Technical tutorials** - Deep dives into programming topics
-- **Project updates** - Progress on what I'm building
-- **Thoughts & opinions** - My take on tech and beyond
+In our fast-paced industry, we often copy-paste solutions without deeply understanding them. My goal here is different: **to slow down and dissect the "why" and "how" of complex systems.**
 
-## Why Markdown?
+## What You Can Expect
 
-Writing in Markdown gives me:
-1. **Version control** - All my posts are tracked in Git
-2. **Portability** - Easy to move content anywhere
-3. **Focus** - Clean writing without formatting distractions
+I write about the problems I've faced in production and the patterns I've learned to solve them. Key topics include:
+
+*   **Distributed Systems**: Microservices patterns, consistency models, and resilience.
+*   **Observability**: Going beyond logs to true system visibility (check out my [OpenTelemetry series](/tags/#opentelemetry)).
+*   **Engineering Culture**: Building high-performing teams and pragmatic processes.
+*   **Java & Spring**: Deep dives into the ecosystem I work with daily.
+
+## Join the Conversation
+
+This isn't just a broadcast channel. I want to learn from you too. Connect with me on [LinkedIn](https://www.linkedin.com/in/laxman-sharma-328b2659), [GitHub](https://github.com/laxman-sharma), or check out my profile on [Toptal](https://www.toptal.com/resume/laxman-sharma).
+
+Detailed, technical, and practical. That's the promise.
+
+Grab a coffee ☕ and let's build something great.
 
 ---
-
-*Stay tuned for more content!*
+*P.S. To get started, check out my deep dive into [OpenTelemetry Fundamentals](/2026/01/08/opentelemetry-java-part-1-fundamentals/).*
