Update file upload blog with CSV benchmarks and fix layouts for Medium

--- a/_posts/2026/01/2026-01-08-welcome.md
+++ b/_posts/2026/01/2026-01-08-welcome.md
@@ -22,7 +22,7 @@ In our fast-paced industry, we often copy-paste solutions without deeply underst
 I write about the problems I've faced in production and the patterns I've learned to solve them. Key topics include:
 
 *   **Distributed Systems**: Microservices patterns, consistency models, and resilience.
-*   **Observability**: Going beyond logs to true system visibility (check out my [OpenTelemetry series]({{ site.baseurl }}/tags/#opentelemetry)).
+*   **Observability**: Going beyond logs to true system visibility (check out my [OpenTelemetry series]({{ site.url }}{{ site.baseurl }}/tags/#opentelemetry)).
 *   **Engineering Culture**: Building high-performing teams and pragmatic processes.
 *   **Java & Spring**: Deep dives into the ecosystem I work with daily.
 
@@ -35,4 +35,4 @@ Detailed, technical, and practical. That's the promise.
 Grab a coffee ☕ and let's build something great.
 
 ---
-*P.S. To get started, check out my deep dive into [OpenTelemetry Fundamentals]({{ site.baseurl }}/2026/01/08/opentelemetry-java-part-1-fundamentals/).*
+*P.S. To get started, check out my deep dive into [OpenTelemetry Fundamentals]({{ site.url }}{{ site.baseurl }}/2026/01/08/opentelemetry-java-part-1-fundamentals/).*
