Optimize tags for all posts

--- a/_posts/2026/01/2026-01-08-welcome.md
+++ b/_posts/2026/01/2026-01-08-welcome.md
@@ -5,7 +5,7 @@ date: 2026-01-14
 author: Laxman Sharma
 image: /assets/images/welcome-hero.png
 categories: [introduction, community]
-tags: [welcome, engineering, distributed-systems, observability]
+tags: [welcome, engineering, distributed-systems]
 excerpt: "Hi, I'm Laxman. Welcome to my digital garden where I share deep dives into distributed systems, observability, and software engineering patterns."
 ---
 
